# cohere-finetune

./: CODEOWNERS  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: tests.yaml
docker/: Dockerfile
notebooks/: validate_and_preprocess_data_by_cohere-finetune.ipynb
src/cohere_finetune/: base_model.py  chat_utils.py  cohere_finetune_service.py  cohere_inference_service.py  configs.py  consts.py  data.py  errors.py  model_config.py  preprocess.py  tokenizer_utils.py  train.py  utils.py
src/cohere_finetune/finetune_backends/cohere_peft/: __init__.py  peft_arguments.py  peft_data.py  peft_model.py  peft_train.py  peft_utils.py
src/cohere_finetune/finetune_backends/cohere_peft/template_parallel_configs/: deepspeed_z3_qlora_config.yaml  fsdp_config.yaml
tests/: test_chat_utils.py  test_preprocess.py
